Remove some layout issues from starter theme

--- a/assets/sass/base/_htmlelements.scss
+++ b/assets/sass/base/_htmlelements.scss
@@ -12,51 +12,3 @@ body {
 	word-wrap: break-word; // Both required to cover all browsers
 	// -webkit-font-smoothing: antialiased; // make text look sharper.
 }
-
-// *,
-// *::before,
-// *::after {
-// 	// box-sizing: inherit;
-// }
-
-// Highlight colours
-// ::selection {}
-// ::-moz-selection {}
-
-a {
-	&:link,
-	&:visited {
-		position: relative;
-		text-decoration: none;
-	}
-}
-
-img {
-	max-width: 100%;
-	height: auto;
-}
-
-ul {
-	padding: 0;
-	margin: 0;
-}
-
-li {
-	list-style-type: none;
-}
-
-p, dl, address, cite {
-	margin: 0 0 1rem;
-}
-
-p {
-	margin-bottom: rem(14px);
-	font-size: 16px;
-	letter-spacing: 0.2px;
-	font-weight: 300;
-	-webkit-font-smoothing: auto;
-	@include md-up {
-		margin-bottom: rem(18px);
-	}
-}
-
