--- a/assets/sass/components/_images.scss
+++ b/assets/sass/components/_images.scss
@@ -1,5 +1,3 @@
-.wp-block-image {
-	img {
-		width: 100%;
-	}
-}
+/*
+ * Styling for images.
+ */
